--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
+    "@angular/cli": "^11.2.3",
     "@angular/compiler-cli": "~11.2.1",
     "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.6.0",
