--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net": "^1.10.23",
     "datatables.net-dt": "^1.10.23",
     "jquery": "^3.5.1",
+    "ngx-image-zoom": "^0.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
